objects/Purchase__c.object
<CustomObject>
    <label>Purchase</label>
    <nameField>
        <displayFormat>PUR-{000000}</displayFormat>
        <label>Purchase Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Purchases</relationshipLabel>
        <relationshipName>Purchases</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Price_Per_Unit__c *  Purchase_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Price_Per_Unit__c</fullName>
        <formula>Item__r.Unit_Price__c  * 1.15</formula>
        <label>Price Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Purchase Quantity</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>